--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,21 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Reflect",
+  "name": "Probably My Reflection",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "47x64 23x32 17x24 11x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "logoMedium.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "143x192"
     },
     {
-      "src": "logo512.png",
+      "src": "logoMax.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "381x512"
     }
   ],
   "start_url": ".",
